[gd_scene load_steps=11 format=4 uid="uid://c2tuctoh4htmw"]

[ext_resource type="Texture2D" uid="uid://b2wcvvgac4x6v" path="res://assets/Tileset1.png" id="1_6bw2v"]
[ext_resource type="Script" uid="uid://0mmma7c3xt4d" path="res://scripts/grid/move_to_grid.gd" id="2_kem5a"]
[ext_resource type="Script" uid="uid://btpvs3o7syi78" path="res://scripts/actor/actor.gd" id="3_gxmxl"]
[ext_resource type="Texture2D" uid="uid://srqngjok4j7q" path="res://assets/highlighted_hex.png" id="3_kem5a"]
[ext_resource type="Script" uid="uid://b2jti6cxxenal" path="res://components/movement/movement_component.gd" id="4_n4w22"]
[ext_resource type="Texture2D" uid="uid://cb38j11d67i0g" path="res://assets/Characters/Human/Human_0_Idle0.png" id="6_gxmxl"]
[ext_resource type="Script" uid="uid://j3332qarlia6" path="res://scripts/camera/interactive_camera.gd" id="7_gxmxl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d4o4o"]
resource_name = "ground"
texture = ExtResource("1_6bw2v")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
0:7/0 = 0
1:7/0 = 0
0:8/0 = 0
1:8/0 = 0
0:9/0 = 0
1:9/0 = 0
0:10/0 = 0
1:10/0 = 0
0:11/0 = 0
1:11/0 = 0
0:12/0 = 0
1:12/0 = 0
0:13/0 = 0
1:13/0 = 0
0:14/0 = 0
1:14/0 = 0
0:15/0 = 0
1:15/0 = 0

[sub_resource type="TileSet" id="TileSet_gdsc3"]
tile_shape = 3
tile_layout = 5
tile_size = Vector2i(32, 21)
sources/0 = SubResource("TileSetAtlasSource_d4o4o")

[sub_resource type="CircleShape2D" id="CircleShape2D_svejp"]

[node name="Node2D" type="Node2D"]

[node name="MoveGrid" type="TileMapLayer" parent="." node_paths=PackedStringArray("movement_component", "player", "highlight_marker")]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAcAAAAAAAAAAAANAAYAAAAAAAAAAAAOAAUAAAAAAAAAAAAPAAQAAAAAAAAAAAAQAAMAAAAAAAAAAAARAAIAAAAAAAAAAAASAAEAAAAAAAAAAAASAAAAAAAAAAAAAAATAP//AAAAAAAAAAAUAP7/AAAAAAAAAAALAPf/AAAAAAAAAAAMAPf/AAAAAAAAAAANAPf/AAAAAAAAAAANAPj/AAAAAAAAAAAOAPj/AAAAAAAAAAANAPn/AAAAAAAAAAANAPr/AAAAAAAAAAAMAPv/AAAAAAAAAAALAPz/AAAAAAAAAAAKAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAALAAIAAAAAAAAAAAAMAAEAAAAAAAAAAAANAAAAAAAAAAAAAAAOAP//AAAAAAAAAAAKAAoAAAAAAAIAAAALAAkAAAAAAAIAAAAMAAgAAAAAAAIAAAANAAcAAAAAAAIAAAAOAAcAAAAAAAIAAAAOAAYAAAAAAAIAAAAPAAYAAAAAAAIAAAAPAAUAAAAAAAIAAAAQAAQAAAAAAAIAAAARAAMAAAAAAAIAAAASAAIAAAAAAAIAAAATAAEAAAAAAAIAAAAUAAAAAAAAAAIAAAAUAP//AAAAAAIAAAATAAAAAAAAAAIAAAAVAP7/AAAAAAIAAAAVAP3/AAAAAAIAAAAUAP3/AAAAAAIAAAATAP7/AAAAAAIAAAASAP7/AAAAAAIAAAARAP//AAAAAAIAAAARAAAAAAAAAAIAAAASAP//AAAAAAIAAAAQAAAAAAAAAAIAAAAQAAEAAAAAAAIAAAAPAAIAAAAAAAIAAAARAAEAAAAAAAIAAAAQAAIAAAAAAAIAAAAPAAMAAAAAAAIAAAAOAAMAAAAAAAIAAAAOAAQAAAAAAAIAAAANAAQAAAAAAAIAAAANAAUAAAAAAAIAAAAMAAUAAAAAAAIAAAAMAAYAAAAAAAIAAAALAAYAAAAAAAIAAAALAAcAAAAAAAIAAAAKAAcAAAAAAAIAAAAKAAgAAAAAAAIAAAAJAAgAAAAAAAIAAAAJAAkAAAAAAAIAAAAIAAkAAAAAAAIAAAAJAAoAAAAAAAIAAAAWAP7/AAAAAAIAAAAVAP//AAAAAAIAAAAVAAAAAAAAAAIAAAAVAAEAAAAAAAIAAAAVAAIAAAAAAAIAAAAUAAIAAAAAAAIAAAAUAAMAAAAAAAIAAAATAAQAAAAAAAIAAAASAAUAAAAAAAIAAAARAAYAAAAAAAIAAAAQAAcAAAAAAAIAAAAPAAgAAAAAAAIAAAAOAAgAAAAAAAIAAAAOAAkAAAAAAAIAAAANAAkAAAAAAAIAAAAMAAoAAAAAAAIAAAAPAAcAAAAAAAIAAAAQAAYAAAAAAAIAAAARAAUAAAAAAAIAAAASAAQAAAAAAAIAAAATAAMAAAAAAAIAAAAUAAEAAAAAAAIAAAATAAIAAAAAAAIAAAASAAMAAAAAAAIAAAARAAQAAAAAAAIAAAANAAgAAAAAAAIAAAAMAAkAAAAAAAIAAAALAAoAAAAAAAIAAAAQAAUAAAAAAAIAAAASAPz/AAAAAAIAAAASAP3/AAAAAAIAAAATAPz/AAAAAAIAAAATAP3/AAAAAAIAAAAUAPz/AAAAAAIAAAAVAPz/AAAAAAIAAAAUAPv/AAAAAAIAAAAWAP3/AAAAAAIAAAAWAPz/AAAAAAIAAAAIAAMAAAAAAAIAAAAJAAMAAAAAAAIAAAAKAAMAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAKAAQAAAAAAAIAAAALAAQAAAAAAAIAAAAMAAQAAAAAAAIAAAANAAMAAAAAAAIAAAANAAIAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAIAAAAPAAAAAAAAAAIAAAAOAAAAAAAAAAIAAAAOAAIAAAAAAAIAAAAPAAEAAAAAAAIAAAAQAP//AAAAAAIAAAAPAP//AAAAAAIAAAAQAP7/AAAAAAIAAAARAP3/AAAAAAIAAAARAP7/AAAAAAIAAAAJAP//AAAAAAIAAAAJAAAAAAAAAAIAAAAJAAEAAAAAAAIAAAAKAAEAAAAAAAIAAAALAAAAAAAAAAIAAAALAAEAAAAAAAIAAAAKAAAAAAAAAAIAAAALAP//AAAAAAIAAAAKAP//AAAAAAIAAAALAP7/AAAAAAIAAAAMAP7/AAAAAAIAAAAMAP//AAAAAAIAAAANAP7/AAAAAAIAAAAMAAAAAAAAAAIAAAAOAP7/AAAAAAIAAAAPAP3/AAAAAAIAAAAPAP7/AAAAAAIAAAANAP//AAAAAAIAAAANAP3/AAAAAAIAAAAKAP7/AAAAAAIAAAAOAPn/AAAAAAAAAAAPAPn/AAAAAAAAAAAPAPr/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAARAPv/AAAAAAAAAAARAPz/AAAAAAAAAAARAPr/AAAAAAAAAAAQAPr/AAAAAAAAAAAQAPn/AAAAAAAAAAARAPn/AAAAAAAAAAAQAPv/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAPz/AAAAAAAAAAAOAPv/AAAAAAAAAAAOAPr/AAAAAAAAAAANAPv/AAAAAAAAAAANAPz/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAALAP3/AAAAAAAAAAASAPv/AAAAAAAAAAATAPv/AAAAAAAAAAATAPr/AAAAAAAAAAASAPr/AAAAAAAAAAASAPn/AAAAAAAAAAASAPj/AAAAAAAAAAATAPj/AAAAAAAAAAAUAPj/AAAAAAAAAAAUAPn/AAAAAAAAAAAUAPr/AAAAAAAAAAATAPn/AAAAAAAAAAAVAPr/AAAAAAAAAAAVAPv/AAAAAAIAAAAWAPv/AAAAAAIAAAAWAPr/AAAAAAIAAAAWAPn/AAAAAAAAAAAVAPn/AAAAAAAAAAAWAPj/AAAAAAAAAAAVAPj/AAAAAAAAAAAVAPf/AAAAAAAAAAAUAPf/AAAAAAAAAAATAPf/AAAAAAAAAAASAPf/AAAAAAAAAAARAPj/AAAAAAAAAAARAPf/AAAAAAAAAAAQAPf/AAAAAAAAAAAPAPj/AAAAAAAAAAAPAPf/AAAAAAAAAAAQAPj/AAAAAAAAAAAIAAQAAAAAAAUAAAAHAAMAAAAAAAIAAAAGAAMAAAAAAAIAAAAGAAIAAAAAAAIAAAAHAAIAAAAAAAIAAAAHAAEAAAAAAAIAAAAGAAEAAAAAAAIAAAAGAAAAAAAAAAIAAAAGAP//AAAAAAIAAAAHAP//AAAAAAIAAAAHAAAAAAAAAAIAAAAHAP7/AAAAAAIAAAAIAP3/AAAAAAIAAAAIAP7/AAAAAAIAAAAJAP3/AAAAAAIAAAAKAPz/AAAAAAIAAAALAPv/AAAAAAIAAAAMAPr/AAAAAAIAAAALAPr/AAAAAAIAAAAKAPr/AAAAAAIAAAAJAPv/AAAAAAIAAAAJAPz/AAAAAAIAAAAIAPz/AAAAAAIAAAAJAPr/AAAAAAIAAAALAPn/AAAAAAIAAAALAPj/AAAAAAIAAAAKAPn/AAAAAAIAAAAMAPn/AAAAAAIAAAAMAPj/AAAAAAIAAAAKAPv/AAAAAAIAAAAIAPv/AAAAAAIAAAAHAP3/AAAAAAIAAAAHAPz/AAAAAAIAAAABAAAAAAAAAAAAAAABAP//AAAAAAAAAAACAP7/AAAAAAAAAAADAP3/AAAAAAAAAAAEAPz/AAAAAAAAAAAFAPz/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAPv/AAAAAAAAAAAHAPv/AAAAAAAAAAAIAPr/AAAAAAAAAAAJAPn/AAAAAAAAAAAJAPj/AAAAAAAAAAAIAPj/AAAAAAAAAAAHAPj/AAAAAAAAAAAGAPn/AAAAAAAAAAAGAPr/AAAAAAAAAAAFAPr/AAAAAAAAAAAEAPr/AAAAAAAAAAAFAPn/AAAAAAAAAAAGAPj/AAAAAAAAAAAHAPf/AAAAAAAAAAAHAPb/AAAAAAAAAAAGAPf/AAAAAAAAAAAGAPb/AAAAAAAAAAAFAPf/AAAAAAAAAAAEAPj/AAAAAAAAAAAEAPn/AAAAAAAAAAADAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAPv/AAAAAAAAAAACAP3/AAAAAAAAAAABAP7/AAAAAAAAAAADAPz/AAAAAAAAAAAEAPv/AAAAAAAAAAAFAPv/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPn/AAAAAAAAAAAFAPj/AAAAAAAAAAAIAPn/AAAAAAAAAAAKAPj/AAAAAAAAAAAKAPf/AAAAAAAAAAAJAPf/AAAAAAAAAAAIAPf/AAAAAAAAAAAJAPb/AAAAAAAAAAAMAPb/AAAAAAAAAAAOAPb/AAAAAAAAAAAOAPf/AAAAAAAAAAANAPb/AAAAAAAAAAALAPb/AAAAAAAAAAAKAPb/AAAAAAAAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAIAAAABAAEAAAAAAAIAAAABAAIAAAAAAAIAAAACAAEAAAAAAAIAAAACAAAAAAAAAAIAAAADAP//AAAAAAIAAAAEAP7/AAAAAAIAAAAEAP3/AAAAAAIAAAACAP//AAAAAAIAAAAFAP7/AAAAAAIAAAAGAP3/AAAAAAIAAAAGAP7/AAAAAAIAAAAEAP//AAAAAAIAAAAFAP//AAAAAAIAAAAFAP3/AAAAAAIAAAAEAAAAAAAAAAIAAAAFAAAAAAAAAAIAAAADAAAAAAAAAAIAAAADAP7/AAAAAAIAAAD//wIAAAAAAAIAAAD//wEAAAAAAAIAAAD//wAAAAAAAAIAAAD/////AAAAAAIAAAD+/wAAAAAAAAIAAAAAAP//AAAAAAIAAAAAAP7/AAAAAAIAAAAAAP3/AAAAAAIAAAABAP3/AAAAAAIAAAABAPz/AAAAAAIAAAAAAPz/AAAAAAIAAAAAAPv/AAAAAAIAAAABAPv/AAAAAAIAAAABAPr/AAAAAAIAAAACAPr/AAAAAAIAAAADAPr/AAAAAAIAAAADAPn/AAAAAAIAAAADAPj/AAAAAAIAAAACAPn/AAAAAAIAAAACAPj/AAAAAAIAAAADAPf/AAAAAAIAAAAEAPb/AAAAAAIAAAAFAPX/AAAAAAIAAAAEAPf/AAAAAAIAAAAFAPb/AAAAAAIAAAAGAPX/AAAAAAIAAAAHAPT/AAAAAAIAAAAIAPT/AAAAAAIAAAAHAPX/AAAAAAIAAAAIAPX/AAAAAAIAAAAIAPb/AAAAAAIAAAAJAPX/AAAAAAIAAAAKAPT/AAAAAAIAAAAKAPX/AAAAAAIAAAALAPT/AAAAAAIAAAAKAPP/AAAAAAIAAAAJAPT/AAAAAAIAAAALAPX/AAAAAAIAAAAMAPT/AAAAAAIAAAANAPT/AAAAAAIAAAANAPX/AAAAAAIAAAAOAPT/AAAAAAIAAAAOAPX/AAAAAAIAAAAPAPT/AAAAAAIAAAAPAPX/AAAAAAIAAAAMAPX/AAAAAAIAAAAPAPb/AAAAAAIAAAAQAPb/AAAAAAIAAAARAPX/AAAAAAIAAAAQAPX/AAAAAAIAAAAQAPT/AAAAAAIAAAARAPb/AAAAAAIAAAASAPb/AAAAAAIAAAATAPb/AAAAAAIAAAAUAPb/AAAAAAIAAAAVAPb/AAAAAAIAAAAWAPb/AAAAAAIAAAAWAPf/AAAAAAIAAAAXAPb/AAAAAAIAAAAVAPX/AAAAAAIAAAAUAPX/AAAAAAIAAAATAPX/AAAAAAIAAAASAPX/AAAAAAIAAAATAPT/AAAAAAIAAAAWAPX/AAAAAAIAAAAXAPf/AAAAAAIAAAAYAPf/AAAAAAIAAAAYAPj/AAAAAAIAAAAYAPn/AAAAAAIAAAAYAPr/AAAAAAIAAAAYAPv/AAAAAAIAAAAYAPz/AAAAAAIAAAAXAPz/AAAAAAIAAAAXAP3/AAAAAAIAAAAXAPv/AAAAAAIAAAAXAPr/AAAAAAIAAAAXAPn/AAAAAAIAAAAXAPj/AAAAAAIAAAAZAPr/AAAAAAIAAAAZAPj/AAAAAAIAAAAZAPf/AAAAAAIAAAAYAPb/AAAAAAIAAAAZAPn/AAAAAAIAAAAHAAYAAAAAAAUAAAAIAAYAAAAAAAUAAAAIAAcAAAAAAAUAAAAJAAcAAAAAAAUAAAAKAAYAAAAAAAUAAAAKAAUAAAAAAAUAAAAJAAUAAAAAAAUAAAAJAAYAAAAAAAUAAAALAAUAAAAAAAUAAAAHAAcAAAAAAAUAAAAHAAgAAAAAAAUAAAAIAAgAAAAAAAUAAAAHAAkAAAAAAAUAAAAGAAgAAAAAAAUAAAAIAAUAAAAAAAUAAAAHAAUAAAAAAAUAAAAHAAQAAAAAAAUAAAAJAAQAAAAAAAUAAAAGAAQAAAAAAAUAAAAGAAUAAAAAAAUAAAAGAAYAAAAAAAUAAAAGAAcAAAAAAAUAAAAFAAYAAAAAAAUAAAAFAAUAAAAAAAUAAAAEAAUAAAAAAAUAAAAEAAQAAAAAAAUAAAAEAAMAAAAAAAUAAAAEAAIAAAAAAAUAAAADAAIAAAAAAAUAAAACAAMAAAAAAAUAAAADAAMAAAAAAAUAAAACAAIAAAAAAAUAAAADAAEAAAAAAAUAAAAEAAEAAAAAAAUAAAAFAAIAAAAAAAUAAAAFAAMAAAAAAAUAAAAFAAEAAAAAAAUAAAAFAAQAAAAAAAUAAAADAAQAAAAAAAUAAAACAAQAAAAAAAUAAAABAAQAAAAAAAUAAAACAAUAAAAAAAUAAAADAAUAAAAAAAUAAAABAAMAAAAAAAUAAAAAAAQAAAAAAAUAAAAAAAMAAAAAAAUAAAD//wMAAAAAAAUAAAD+/wQAAAAAAAUAAAD//wQAAAAAAAUAAAD//wUAAAAAAAUAAAABAAUAAAAAAAUAAAABAAYAAAAAAAUAAAACAAYAAAAAAAUAAAADAAYAAAAAAAUAAAAEAAYAAAAAAAUAAAAEAAcAAAAAAAUAAAAFAAcAAAAAAAUAAAAFAAgAAAAAAAUAAAAIAAoAAAAAAAIAAAAHAAsAAAAAAAIAAAAHAAoAAAAAAAIAAAAIAAsAAAAAAAIAAAAGAAoAAAAAAAIAAAAGAAkAAAAAAAIAAAAFAAoAAAAAAAIAAAAFAAkAAAAAAAIAAAAEAAkAAAAAAAIAAAADAAkAAAAAAAIAAAAEAAgAAAAAAAIAAAADAAgAAAAAAAIAAAADAAcAAAAAAAIAAAACAAcAAAAAAAIAAAABAAcAAAAAAAIAAAAAAAcAAAAAAAIAAAD//wcAAAAAAAIAAAAAAAYAAAAAAAIAAAD//wYAAAAAAAIAAAAAAAUAAAAAAAIAAAD+/wYAAAAAAAIAAAD+/wUAAAAAAAIAAAD9/wUAAAAAAAIAAAD8/wUAAAAAAAIAAAD9/wQAAAAAAAIAAAD9/wMAAAAAAAIAAAD+/wIAAAAAAAIAAAD+/wMAAAAAAAIAAAA=")
tile_set = SubResource("TileSet_gdsc3")
script = ExtResource("2_kem5a")
movement_component = NodePath("../Actor/MovementComponent")
player = NodePath("../Actor")
highlight_marker = NodePath("highlight_marker")
metadata/_custom_type_script = "uid://0mmma7c3xt4d"

[node name="highlight_marker" type="Sprite2D" parent="MoveGrid"]
position = Vector2(144, 42)
texture = ExtResource("3_kem5a")

[node name="Actor" type="CharacterBody2D" parent="." node_paths=PackedStringArray("movement_component")]
script = ExtResource("3_gxmxl")
movement_component = NodePath("MovementComponent")
metadata/_custom_type_script = "uid://btpvs3o7syi78"

[node name="MovementComponent" type="Node" parent="Actor"]
script = ExtResource("4_n4w22")
metadata/_custom_type_script = "uid://b2jti6cxxenal"

[node name="Sprite2D" type="Sprite2D" parent="Actor"]
position = Vector2(0, -40)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_gxmxl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actor"]
shape = SubResource("CircleShape2D_svejp")

[node name="InteractiveCamera" type="Camera2D" parent="." node_paths=PackedStringArray("target_actor")]
script = ExtResource("7_gxmxl")
target_actor = NodePath("../Actor")
metadata/_custom_type_script = "uid://j3332qarlia6"
